--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
      rel="stylesheet"
      />
 
-     <link rel="stylesheet" href="../styles/index.css">
-     <link rel="stylesheet" href="../styles/globalStyles.css">
+     <link rel="stylesheet" href="./src/styles/index.css"/>
+     <link rel="stylesheet" href="./src/styles/globalStyles.css"/>
     <title>Home Page</title>
 </head>
 <body>
     <header>
         <div class="header__div">
-            <img src="../assets/Brand1Dot.svg" alt="">
+            <img src="./src/assets/Brand1Dot.svg" alt="">
             <h2>Kenzie Empresas</h2>
         </div>
         <div class="header__div">
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section class="section1">
-            <img class="main__img" src="../assets/imgCrop.png" alt="">
+            <img class="main__img" src="./src/assets/imgCrop.png" alt="">
         </section>
         <section class="section2">
             
@@ -47,6 +47,6 @@
     </main>
     
 
-    <script type="module" src="../scripts/index.js"></script>
+    <script type="module" src="./src/scripts/index.js"></script>
 </body>
 </html>
