--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -13,7 +13,7 @@
     rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../styles/globalStyles.css">
+    <link rel="stylesheet" href="../styles/globalStyles.css"/>
     <link rel="stylesheet" href="../styles/login.css">
     <title>Login</title>
 </head>
