--- a/src/pages/userPage.html
+++ b/src/pages/userPage.html
@@ -44,6 +44,6 @@
     
 
     </main>
-    <script type="module" src="/scripts/userPage.js"></script>
+    <script type="module" src="../scripts/userPage.js"></script>
 </body>
 </html>
